# sensor-history-reader

./: README.md  configuredsensors  meson.build  xyz.openbmc_project.SensorReader.service.in
.github/workflows/: trigger-build.yml
src/: meson.build  sensor_reader.cpp  sensor_reader.hpp  sensor_reader_main.cpp
yaml/xyz/openbmc_project/SensorReader/History/: Read.interface.yaml
